style.css
.antonio-font {
  font-family: "Antonio", sans-serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
}

.league-spartan-font {
  font-family: "League Spartan", sans-serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
}

:root {
  --white: #ffffff;
  --mysterious-depth: #070724;
  --carbon-blue: #38384f;
  --formal-affair: #838391;
  --fairy-tale-blue: #419ebb;
  --golden-koi: #eda249;
  --hokaido-lavender: #6f2ed6;
  --dizzy-days: #d14c32;
  --blood-moon: #d83a34;
  --rusty-nail: #cd5120;
  --tealish: #1ec2a4;
  --retro-blue: #2d68f0;
  --bleached-silk: #f2f2f2;
  --planet-color: transparent;
  --spanish-grey: #979797;
}

body * {
  box-sizing: border-box;
}

body,
h1,
h2,
h3,
h4,
ul,
p {
  margin: 0;
}

ul {
  padding-left: 0;
}

body {
  background-color: var(--bleached-silk);
  font-family: "League Spartan", sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 25px;
  color: var(--white);

  height: 100vh;

  display: flex;
  align-items: start;
}

h1 {
  font-family: "Antonio", sans-serif;
  font-weight: 500;
  font-size: 80px;
  line-height: 103px;
  text-transform: uppercase;
  color: var(--white);
}

h2 {
  font-family: "Antonio", sans-serif;
  font-weight: 500;
  font-size: 40px;
  line-height: 52px;
  letter-spacing: -1.5px;
}

h3 {
  font-family: "League Spartan", sans-serif;
  font-weight: 700;
  font-size: 12px;
  line-height: 25px;
  letter-spacing: 2.6px;
}

h4 {
  font-family: "League Spartan", sans-serif;
  font-weight: 700;
  font-size: 11px;
  line-height: 25px;
  letter-spacing: 1px;
}

.button {
  display: inline-block;
  width: 350px;
  height: 48px;
  position: relative;
  text-transform: uppercase;
  font-family: "League Spartan", sans-serif;
  font-weight: 700;
  font-size: 12px;
  line-height: 25px;
  letter-spacing: 2.6px;
  border: 1px solid rgba(255, 255, 255, 0.2);
  color: var(--white);
  padding: 12px 0px 12px 74px;
  text-align: left;
  background-color: transparent;
}

.button:hover {
  background-color: var(--formal-affair);
}

.button.active {
  background-color: var(--planet-color);
}

.button::before {
  position: absolute;
  display: block;
  width: 18px;
  height: 25px;
  top: 12px;
  left: 28px;

  font-family: "League Spartan", sans-serif;
  font-weight: 700;
  font-size: 12px;
  line-height: 25px;
  letter-spacing: 2.57px;

  opacity: 50%;
}

.button-1::before {
  content: "01";
}

.button-2::before {
  content: "02";
}

.button-3::before {
  content: "03";
}

.container {
  width: 1440px;
  background-color: var(--mysterious-depth);
  background-image: url("./assets/background-stars.svg");
  background-position: center;
  background-repeat: no-repeat;
  margin-left: auto;
  margin-right: auto;
}

header {
  display: flex;
  justify-content: space-between;
  padding: 0px 41px 0 32px;
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
}

.mobile-header {
  display: flex;
  align-items: center;
  justify-content: space-between;

  .mobile-menu {
    display: none;

    input[type="checkbox"] {
      display: none;
    }
  }
}

.logo {
  text-transform: uppercase;
  font-family: "Antonio", sans-serif;
  font-weight: 500;
  font-size: 28px;
  letter-spacing: -1.05px;
  color: var(--white);
  display: flex;
  align-items: center;
}

nav {
  ul {
    list-style-type: none;
    opacity: 75%;
    display: flex;
    gap: 33px;
    text-transform: uppercase;
  }

  li {
    height: 85px;
    display: flex;
    align-items: center;
    /* border-top: 4px solid transparent; */
    border-top: 4px solid transparent;
  }

  a {
    color: var(--white);
    font-weight: 700;
    font-size: 11px;
    letter-spacing: 1px;
    text-decoration: none;
  }
}

main {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 87px;
  margin-top: 87px;

  .overview {
    display: none;
  }

  .structure {
    display: none;
  }

  .geology {
    display: none;
  }
}

main:has(.button-1.active) .overview {
  display: flex;
}

main:has(.button-2.active) .structure {
  display: flex;
}

main:has(.button-3.active) .geology {
  display: flex;
}

main:has(.button-3.active) .overview-img {
  display: flex;
}

.left-side {
  display: flex;
  position: relative;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 582px;
  width: 924px;

  .structure {
    display: none;
  }

  .geology {
    display: none;
    position: absolute;
    width: 163px;
    height: auto;
    bottom: 10px;
  }
}

.right-side {
  display: flex;
  flex-direction: column;
  width: 516px;

  .src {
    display: flex;
    gap: 8px;
    margin-bottom: 39px;
    opacity: 50%;

    a {
      font-weight: 700;
      color: var(--white);
      display: none;
      align-items: center;
      gap: 8px;
    }
  }

  a::after {
    content: "";
    display: inline-block;
    width: 12px;
    height: 12px;
    background-image: url("./assets/icon-source.svg");
    background-position: center;
    background-repeat: no-repeat;
  }

  h1 {
    margin-bottom: 23px;
  }

  .descr {
    width: 350px;
    height: 145px;
    margin-bottom: 24px;
  }

  .button-set {
    display: flex;
    flex-direction: column;
    gap: 16px;
  }
}

footer {
  padding-bottom: 56px;
  ul {
    display: flex;
    justify-content: center;
    gap: 30px;
    list-style-type: none;
    text-transform: uppercase;

    li {
      width: 255px;
      padding: 20px 23px 27px;
      border: 1px solid rgba(255, 255, 255, 0.2);

      h4 {
        opacity: 0.5;
      }
    }
  }
}

@media (min-width: 768px) and (max-width: 1439px) {
  .container {
    width: 768px;
  }
  .button {
    font-size: 9px;
    letter-spacing: 1.93px;
    width: 281px;
    height: 40px;
    padding: 8px 0px 7px 50px;

    &::before {
      font-size: 9px;
      top: 8px;
      left: 20px;
    }
  }

  header {
    flex-direction: column;

    .logo {
      padding-top: 32px;
      padding-bottom: 15px;
      margin-left: auto;
      margin-right: auto;
    }

    ul {
      justify-content: center;
    }
  }

  main {
    flex-direction: column;
    margin-top: 27px;
    margin-bottom: 27px;

    .left-side {
      height: 422px;
      width: initial;
      img {
        transform: scale(0.634);
      }
    }

    .right-side {
      width: initial;
      flex-direction: row;
      align-items: center;
      gap: 69px;

      h1 {
        font-size: 48px;
        line-height: initial;
      }

      .descr {
        height: 110px;
        font-size: 11px;
        line-height: 22px;
      }

      .src a {
        font-size: 12px;
      }
    }
  }

  footer {
    padding-bottom: 36px;

    ul {
      gap: 11px;

      li {
        width: 164px;
        padding: 16px 0px 19px 15px;

        h4 {
          font-size: 8px;
          line-height: 16px;
        }

        h2 {
          font-size: 24px;
          left: initial;
          letter-spacing: -0.9px;
        }
      }
    }
  }
}

@media (max-width: 767px) {
  .container {
    width: 375px;
  }

  header {
    padding: 16px 24px;
    flex-direction: column;
  }

  nav {
    display: none;
  }

  .container:has(input[type="checkbox"]:checked) {
    .mobile-header {
      padding-bottom: 17px;
      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
    }

    nav {
      display: block;
    }

    main {
      display: none;
    }

    footer {
      display: none;
    }
  }

  main {
    flex-direction: column;
    position: relative;
    margin: 0;

    .left-side {
      height: 256px;
      width: initial;
      margin-top: 50px;

      img {
        transform: scale(0.3843);
      }

      img.geology {
        transform-origin: bottom;
      }
    }

    .right-side {
      width: 375px;

      .src {
        justify-content: center;
      }

      .descr {
        width: inherit;
        padding: 0 24px;
        text-align: center;
      }

      h1 {
        text-align: center;
        font-size: 40px;
        line-height: initial;
        margin-bottom: 16px;
      }

      .button-set {
        flex-direction: row;
        position: absolute;
        top: 0;
        left: 0;
        width: inherit;
        justify-content: space-around;
        border-bottom: 1px solid rgba(255, 255, 255, 0.2);

        .button {
          width: 80px;
          height: 50px;
          padding: 0;
          border: none;
          border-bottom: 4px solid transparent;
          overflow: hidden;
          font-size: 9px;
          letter-spacing: 1.93px;
          text-align: center;

          &:nth-child(2) {
            text-indent: -64px;
            word-spacing: 10px;
          }

          &:nth-child(3) {
            padding-top: 9px;
            line-height: 28px;
          }

          &::before {
            display: none;
          }

          &.active {
            background-color: transparent;
            border-color: var(--planet-color);
          }
        }
      }
    }
  }

  footer {
    padding-bottom: 47px;

    ul {
      flex-direction: column;
      align-items: center;
      gap: 8px;

      li {
        display: flex;
        align-items: center;
        justify-content: space-between;
        width: 327px;
        padding: 9px 24px 13px;

        h4 {
          font-size: 8px;
        }

        h2 {
          font-size: 20px;
          line-height: initial;
          letter-spacing: -0.75px;
        }
      }
    }
  }

  nav {
    width: 100%;
    ul {
      flex-direction: column;
      opacity: 100%;
      gap: 0;

      li {
        height: 65px;
        color: var(--white);
        justify-content: space-between;
        gap: 0;
        border-top: none;
        border-bottom: 1px solid rgba(255, 255, 255, 0.2);

        &:last-child {
          border-bottom: none;
        }

        a {
          display: flex;
          align-items: center;
          width: 100%;

          .planet-ico {
            content: "";
            display: inline-block;
            width: 20px;
            height: 20px;
            border-radius: 50%;
            /* background-color: tomato; */
            margin-right: 25px;
          }
        }

        &::after {
          content: "";
          width: 4px;
          height: 8px;
          display: block;
          background-image: url("./assets/icon-chevron.svg");
          background-position: center;
          background-repeat: no-repeat;
        }
      }
    }
  }

  .mobile-header {
    .mobile-menu {
      display: block;
    }

    .mobile-menu:has(input[type="checkbox"]:checked) {
      .hamburger::before {
        transform: rotate(45deg) translateX(3px) translateY(-3px);
        transform-origin: top left;
      }

      .hamburger::after {
        transform: rotate(-45deg) translateX(1px) translateY(3px);
        transform-origin: bottom left;
      }

      .hamburger div {
        width: 0;
      }
    }

    .hamburger {
      display: flex;
      flex-direction: column;
      align-items: center;
      gap: 4px;
      width: 24px;
      height: 17px;

      &::before {
        content: "";
        display: block;
        width: 24px;
        height: 3px;
        background-color: var(--spanish-grey);
        transition: all 0.2s ease;
      }

      div {
        display: block;
        width: 24px;
        height: 3px;
        background-color: var(--spanish-grey);
        transition: all 0.2s ease;
      }

      &::after {
        content: "";
        display: block;
        width: 24px;
        height: 3px;
        background-color: var(--spanish-grey);
        transition: all 0.2s ease;
      }
    }
  }
}

